2007-01-10  Ville Vainio  <vivainio@gmail.com>

	* Extensions/envpersist.py: Turbocharged %env that remembers
	env vars across sessions; e.g. "%env PATH+=;/opt/scripts" or
	"%env VISUAL=jed".

2007-01-05  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (showtraceback): ensure that we correctly call
	custom handlers in all cases (some with pdb were slipping through,
	but I'm not exactly sure why).

	* IPython/Debugger.py (Tracer.__init__): added new class to
	support set_trace-like usage of IPython's enhanced debugger.

2006-12-24  Ville Vainio  <vivainio@gmail.com>

	* ipmaker.py: more informative message when ipy_user_conf
	import fails (suggest running %upgrade).
	
	* tools/run_ipy_in_profiler.py: Utility to see where
	the time during IPython startup is spent.
	
2006-12-20  Ville Vainio  <vivainio@gmail.com>

	* 0.7.3 is out - merge all from 0.7.3 branch to trunk

	* ipapi.py: Add new ipapi method, expand_alias.
	
	* Release.py: Bump up version to 0.7.4.svn

2006-12-17  Ville Vainio  <vivainio@gmail.com>

	* Extensions/jobctrl.py: Fixed &cmd arg arg... 
	to work properly on posix too
	
	* Release.py: Update revnum (version is still just 0.7.3).

2006-12-15  Ville Vainio  <vivainio@gmail.com>

	* scripts/ipython_win_post_install: create ipython.py in
	prefix + "/scripts".
	
	* Release.py: Update version to 0.7.3.
    
2006-12-14  Ville Vainio  <vivainio@gmail.com>

	* scripts/ipython_win_post_install: Overwrite old shortcuts
	if they already exist

	* Release.py: release 0.7.3rc2
    
2006-12-13  Ville Vainio  <vivainio@gmail.com>

	* Branch and update Release.py for 0.7.3rc1

2006-12-13  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (IPShellWX): update for current WX naming
	conventions, to avoid a deprecation warning with current WX
	versions.  Thanks to a report by Danny Shevitz.

2006-12-12  Ville Vainio  <vivainio@gmail.com>

	* ipmaker.py: apply david cournapeau's patch to make